--- a/DemoSpringBoot/src/main/resources/application.properties
+++ b/DemoSpringBoot/src/main/resources/application.properties
@@ -5,5 +5,5 @@ spring.datasource.url=jdbc:postgresql://localhost/postgres
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
